--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -43,6 +43,18 @@
             font-size: 20px;
             line-height: 150%;
             color: #e7dfff;
+
+            .icon-copy {
+                font-size: 14px;
+                font-weight: 400;
+                cursor: pointer;
+
+				&:active {
+					transition-duration: 0.35s;
+					transform: scale(1.2);
+					
+				}
+            }
         }
     }
 
