--- a/src/pages/Profile/ManageNft/MintNFT/PreviewModal.module.scss
+++ b/src/pages/Profile/ManageNft/MintNFT/PreviewModal.module.scss
@@ -1,104 +1,125 @@
-.modal-style {
-    background: #ebe3ff;
+.modal-box {
     border-radius: 8px;
-    width: 1080px;
-    margin: 60px auto;
-    padding: 20px;
-    height: fit-content;
+    padding: 10px;
+    max-width: 1080px;
+    z-index: 9999;
 
-    .close-icon {
-        text-align: right;
-        cursor: pointer;
+    :global(.modal-content) {
+        width: 1080px;
+        background: #ebe3ff;
+        border-radius: 8px;
     }
 
-    .title {
-        text-align: center;
-        .big-title {
-            font-weight: 600;
-            font-size: 24px;
-            line-height: 29px;
-            color: #402a7d;
-            text-transform: uppercase;
-        }
+    .modal-body {
+        background: #ebe3ff;
+        border-radius: 8px;
+        padding: 10px;
 
-        .sub-title {
-			text-align: center;
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 150%;
-            color: #BE008E;
-			padding: 12px 77px;
-			width: fit-content;
-			margin: 20px auto;
-			background: linear-gradient(90deg, rgba(217, 171, 255, 0) 0%, #DAADFF 49.48%, rgba(210, 155, 255, 0) 100%);
-        }
-    }
-
-    .list-nft {
-        padding: 0px 35px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-wrap: wrap;
-
-        $break-point-1: 1180px;
-        $break-point-2: 912px;
-
-        .nft-item {
-            width: 180px;
-            min-height: 200px;
-            background: linear-gradient(180deg, #6f08fe 0%, #513e7d 100%);
-            border: 1px solid #ad99e7;
-            box-sizing: border-box;
-            border-radius: 6px;
+        .modal-style {
+            background: #ebe3ff;
+            border-radius: 8px;
             height: fit-content;
-            cursor: pointer;
-            margin: 10px;
 
-            .top {
-                border-bottom: 1px solid #ad99e7;
-                box-sizing: border-box;
-                border-radius: 8px;
-                width: 100%;
-                height: 180px;
-                // background-repeat: no-repeat;
-                // background-position: center;
-                // background-size: 101% 101%;
+            .close-icon {
+                text-align: right;
+                cursor: pointer;
+            }
 
-                @media (max-width: $break-point-1) {
-                    background-size: 80px 120px;
+            .title {
+                text-align: center;
+                .big-title {
+                    font-weight: 600;
+                    font-size: 24px;
+                    line-height: 29px;
+                    color: #402a7d;
+                    text-transform: uppercase;
                 }
 
-                .preview-img {
-                    width: 100%;
-                    height: 100%;
-                    border-radius: 8px;
+                .sub-title {
+                    text-align: center;
+                    font-weight: 500;
+                    font-size: 16px;
+                    line-height: 150%;
+                    color: #be008e;
+                    padding: 12px 77px;
+                    width: fit-content;
+                    margin: 20px auto;
+                    background: linear-gradient(
+                        90deg,
+                        rgba(217, 171, 255, 0) 0%,
+                        #daadff 49.48%,
+                        rgba(210, 155, 255, 0) 100%
+                    );
                 }
             }
 
-            .bottom {
-                padding: 12px;
-                .title {
-                    font-weight: 500;
-                    font-size: 16px;
-                    line-height: 23px;
-                    color: #ffffff;
-                    margin-bottom: 6px;
-                    text-align: left;
-                }
+            .list-nft {
+                padding: 0px 35px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-wrap: wrap;
 
-                .nftId {
-                    font-weight: 500;
-                    font-size: 16px;
-                    line-height: 20px;
-                    color: #dac6ff;
+                $break-point-1: 1180px;
+                $break-point-2: 912px;
+
+                .nft-item {
+                    width: 180px;
+                    min-height: 200px;
+                    background: linear-gradient(180deg, #6f08fe 0%, #513e7d 100%);
+                    border: 1px solid #ad99e7;
+                    box-sizing: border-box;
+                    border-radius: 6px;
+                    height: fit-content;
+                    cursor: pointer;
+                    margin: 10px;
+
+                    .top {
+                        border-bottom: 1px solid #ad99e7;
+                        box-sizing: border-box;
+                        border-radius: 8px;
+                        width: 100%;
+                        height: 180px;
+                        // background-repeat: no-repeat;
+                        // background-position: center;
+                        // background-size: 101% 101%;
+
+                        @media (max-width: $break-point-1) {
+                            background-size: 80px 120px;
+                        }
+
+                        .preview-img {
+                            width: 100%;
+                            height: 100%;
+                            border-radius: 8px;
+                        }
+                    }
+
+                    .bottom {
+                        padding: 12px;
+                        .title {
+                            font-weight: 500;
+                            font-size: 16px;
+                            line-height: 23px;
+                            color: #ffffff;
+                            margin-bottom: 6px;
+                            text-align: left;
+                        }
+
+                        .nftId {
+                            font-weight: 500;
+                            font-size: 16px;
+                            line-height: 20px;
+                            color: #dac6ff;
+                        }
+                    }
                 }
+            }
+
+            .pagination {
+                text-align: center;
+                margin-top: 30px;
             }
         }
-    }
-
-    .pagination {
-        text-align: center;
-        margin-top: 30px;
     }
 }
