--- a/src/components/ListNft/ListNft.module.scss
+++ b/src/components/ListNft/ListNft.module.scss
@@ -1,5 +1,5 @@
 .list-nft {
-	display: flex;
-    flex-flow:wrap;
-    justify-content: space-between;
+    width: 100%;
+    display: flex;
+    flex-flow: wrap;
 }
