--- a/src/pages/Profile/ManageNft/MintNFT/DetailModal.module.scss
+++ b/src/pages/Profile/ManageNft/MintNFT/DetailModal.module.scss
@@ -35,9 +35,9 @@
             border: 1px solid #ad99e7;
             margin-right: 40px;
 
-			img {
-				border-radius: 8px;
-			}
+            img {
+                border-radius: 8px;
+            }
         }
 
         .right {
@@ -97,6 +97,37 @@
                     color: #ffffff;
                     text-align: justify;
                 }
+            }
+
+            .content-attribute {
+                flex-direction: column;
+            }
+
+            .info-group {
+                padding-top: 7%;
+                &-header {
+                    font-size: 16px;
+                    color: white;
+                    font-weight: 600;
+                }
+                &-text {
+                    font-size: 14px;
+                    color: white;
+                    font-weight: 400;
+                }
+            }
+
+            .info-image {
+                display: inline-block;
+                position: relative;
+                width: 60px;
+                height: 60px;
+                overflow: hidden;
+                border-radius: 50%;
+            }
+            .info-image img {
+                height: 100%;
+                width: auto;
             }
         }
     }
