--- a/src/pages/Profile/ManageNft/NFTDetail/NFTDetail.module.scss
+++ b/src/pages/Profile/ManageNft/NFTDetail/NFTDetail.module.scss
@@ -122,8 +122,8 @@
             border-radius: 50%;
         }
         .info-image img {
-            width: 100%;
-            height: auto;
+            height: 100%;
+            width: auto;
         }
     }
 }
