--- a/src/pages/Profile/Store/NFTDetail/NFTDetail.module.scss
+++ b/src/pages/Profile/Store/NFTDetail/NFTDetail.module.scss
@@ -1,14 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap");
 .mint-nft-detail {
     max-width: 1180px;
-	margin: 0 auto;
-	padding-top: 60px;
+    margin: 0 auto;
+    padding-top: 60px;
+    font-family: "Montserrat";
 
     .left {
         display: flex;
         align-items: flex-start;
 
         .back {
-			background: #56428F;
+            background: #56428f;
             border-radius: 4px;
             padding: 20px 22px;
             color: #ffffff;
@@ -19,14 +21,14 @@
         }
 
         .image-box {
-			border: 3px solid #AD99E7;
+            border: 3px solid #ad99e7;
             box-sizing: border-box;
             border-radius: 8px;
-			background: #56428F;
+            background: #56428f;
             width: 440px;
             height: 440px;
             padding: 40px;
-
+            filter: drop-shadow(0px 0px 100px rgba(220, 207, 255, 0.45));
             img {
                 width: 100%;
                 height: 100%;
@@ -35,10 +37,11 @@
     }
 
     .right {
-		background: #402A7D;
+        background: #402a7d;
         backdrop-filter: blur(50px);
         border-radius: 4px;
         padding: 32px;
+        margin-bottom: 20px;
 
         .title {
             display: flex;
@@ -57,21 +60,21 @@
                 font-weight: 500;
                 font-size: 24px;
                 line-height: 150%;
-				color: #BE74FF;
+                color: #be74ff;
                 margin-right: 10px;
             }
         }
 
-		.third {
-			background: #AD99E7;
-			border-radius: 4px;
-			padding: 2px 11px;
-			font-weight: 700;
-			font-size: 14px;
-			line-height: 150%;
-			color: #402A7D;
-			width: fit-content;
-		}
+        .third {
+            background: #ad99e7;
+            border-radius: 4px;
+            padding: 2px 11px;
+            font-weight: 700;
+            font-size: 14px;
+            line-height: 150%;
+            color: #402a7d;
+            width: fit-content;
+        }
 
         .content {
             display: flex;
@@ -82,7 +85,7 @@
             line-height: 150%;
 
             .title {
-                color: #D9ADFF;
+                color: #d9adff;
                 padding-right: 10px;
             }
 
@@ -91,6 +94,35 @@
                 text-align: justify;
             }
         }
-    }
+        .content-attribute {
+            flex-direction: column;
+        }
 
+        .info-group {
+            padding-top: 7%;
+            &-header {
+                font-size: 16px;
+                color: white;
+                font-weight: 600;
+            }
+            &-text {
+                font-size: 14px;
+                color: white;
+                font-weight: 400;
+            }
+        }
+
+        .info-image {
+            display: inline-block;
+            position: relative;
+            width: 60px;
+            height: 60px;
+            overflow: hidden;
+            border-radius: 50%;
+        }
+        .info-image img {
+            height: 100%;
+            width: auto;
+        }
+    }
 }
