--- a/src/pages/Profile/ManageNft/MintNFT/MintNFTBox.module.scss
+++ b/src/pages/Profile/ManageNft/MintNFT/MintNFTBox.module.scss
@@ -3,7 +3,7 @@ $tablet: 768px;
 $mobile: 576px;
 .mintNFT-box {
     background: #ebe3ff;
-    border: 1px solid rgba(202, 186, 245, 0.3);
+    // border: 1px solid rgba(202, 186, 245, 0.3);
     box-sizing: border-box;
     backdrop-filter: blur(50px);
     border-radius: 4px;
