--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -43,6 +43,7 @@
             font-size: 20px;
             line-height: 150%;
             color: #e7dfff;
+			text-align: center;
 
             .icon-copy {
                 font-size: 14px;
