--- a/src/components/FilterStore/FilterStore.module.scss
+++ b/src/components/FilterStore/FilterStore.module.scss
@@ -1,119 +1,154 @@
 .filter {
-  background: #402A7D;
-  // border-radius: 12px;
-  padding: 60px 20px;
-  height: 100%;
-
-  //   animation-name: example;
-  //   transform-origin: top;
-  //   animation-duration: 1s;
-  //   transition: all 1s ease-in-out;
-
-  //   @keyframes example {
-  //     0% {
-  //       width: 0;
-  //     }
-  //     100% {
-  //       height: 100vh;
-  //     }
-  //   }
-
-  .card-header {
-    display: flex;
-    align-items: center;
-
-    .title {
-      font-weight: 600;
-      font-size: 24px;
-      color: #ffffff;
-      margin-left: 12px;
-    }
-  }
-
-  .collapse {
-    margin-top: 60px;
-
-    .panel-content {
-      font-weight: 600;
-      font-size: 14px;
-      line-height: 23px;
-      color: #ffffff;
-
-      .name {
-        display: flex;
-        align-items: center;
-        margin-bottom: 14px;
-        cursor: pointer;
-
-        &-avatar {
-          width: 24px;
-          height: 24px;
-          border-radius: 50%;
-          background-color: #ffffff;
-          //   border: 1px solid #6dd0e7;
-        }
-
-        &-text {
-          font-weight: 500;
-          font-size: 16px;
-          line-height: 21px;
-          color: #ffffff;
-          margin-left: 12px;
-
-          &:hover {
-            color: rgba(255, 255, 255, 0.8);
-            transition-duration: 0.3s;
-          }
-        }
-      }
-      .name-selected {
-        display: flex;
-        align-items: center;
-        margin-bottom: 14px;
-        cursor: pointer;
-        color: #8deaff;
-
-        &-avatar {
-          width: 24px;
-          height: 24px;
-          border-radius: 50%;
-          background-color: #ffffff;
-          //   border: 1px solid #6dd0e7;
-        }
-
-        &-text {
-          font-weight: 500;
-          font-size: 16px;
-          line-height: 21px;
-          margin-left: 12px;
-          color: #8deaff !important;
-          &:hover {
-            color: rgba(255, 255, 255, 0.8);
-            transition-duration: 0.3s;
-          }
-        }
-      }
-    }
-
-    .panel-content-game {
-      font-weight: 600;
-      font-size: 14px;
-      line-height: 23px;
-      color: #ffffff;
-      padding: 12px 40px 12px 16px;
-      cursor: pointer;
-    }
-  }
-
-  .button {
-    background: linear-gradient(90deg, #00c6fb 0%, #005bea 100%);
+    background: #402a7d;
+    backdrop-filter: blur(50px);
+    padding: 60px 25px;
+    min-height: 100%;
     width: 100%;
-    border-radius: 8px;
-    padding: 12px 25px;
-    text-transform: uppercase;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 150%;
-    color: #ffffff;
-  }
+
+    .card-header {
+        display: flex;
+        align-items: center;
+
+        .title {
+            font-weight: 600;
+            font-size: 24px;
+            color: #ffffff;
+            margin-left: 12px;
+        }
+    }
+
+    .collapse {
+        margin-top: 60px;
+
+        .panel {
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            box-sizing: border-box;
+            border-radius: 8px;
+
+            .panel-header {
+                padding: 12px 20px;
+                font-weight: 600;
+                font-size: 20px;
+                line-height: 26px;
+                color: #ffffff;
+				display: flex;
+				align-items: center;
+				justify-content: space-between;
+				cursor: pointer;
+            }
+
+            .panel-content {
+                border-top: 1px solid rgba(255, 255, 255, 0.2);
+                padding: 12px 0px;
+
+                .game-name {
+                    padding: 12px 20px;
+                    cursor: pointer;
+					transition-duration: 0.35s;
+					font-size: 18px;
+
+                    &:hover {
+                        background: #bcabea;
+                        color: #402a7d;
+                    }
+
+                    .game-avatar {
+                        margin-right: 12px;
+                        width: 24px;
+                        height: 24px;
+                        border-radius: 50%;
+                        background-color: #ffffff;
+                    }
+                }
+
+                .game-active {
+                    background: #bcabea;
+                    color: #402a7d;
+                }
+            }
+        }
+
+        .panel-content {
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 23px;
+            color: #ffffff;
+
+            .name {
+                display: flex;
+                align-items: center;
+                margin-bottom: 14px;
+                cursor: pointer;
+
+                &-avatar {
+                    width: 24px;
+                    height: 24px;
+                    border-radius: 50%;
+                    background-color: #ffffff;
+                    //   border: 1px solid #6dd0e7;
+                }
+
+                &-text {
+                    font-weight: 500;
+                    font-size: 16px;
+                    line-height: 21px;
+                    color: #ffffff;
+                    margin-left: 12px;
+
+                    &:hover {
+                        color: rgba(255, 255, 255, 0.8);
+                        transition-duration: 0.3s;
+                    }
+                }
+            }
+            .name-selected {
+                display: flex;
+                align-items: center;
+                margin-bottom: 14px;
+                cursor: pointer;
+                color: #8deaff;
+
+                &-avatar {
+                    width: 24px;
+                    height: 24px;
+                    border-radius: 50%;
+                    background-color: #ffffff;
+                    //   border: 1px solid #6dd0e7;
+                }
+
+                &-text {
+                    font-weight: 500;
+                    font-size: 16px;
+                    line-height: 21px;
+                    margin-left: 12px;
+                    color: #8deaff !important;
+                    &:hover {
+                        color: rgba(255, 255, 255, 0.8);
+                        transition-duration: 0.3s;
+                    }
+                }
+            }
+        }
+
+        .panel-content-game {
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 23px;
+            color: #ffffff;
+            padding: 12px 40px 12px 16px;
+            cursor: pointer;
+        }
+    }
+
+    .button {
+        background: linear-gradient(90deg, #00c6fb 0%, #005bea 100%);
+        width: 100%;
+        border-radius: 8px;
+        padding: 12px 25px;
+        text-transform: uppercase;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 150%;
+        color: #ffffff;
+    }
 }
