--- a/src/pages/Store/index.module.scss
+++ b/src/pages/Store/index.module.scss
@@ -5,7 +5,6 @@ $mobile: 576px;
 $break-point-2: 912px;
 $break-point-3: 767px;
 .profile {
-    padding-bottom: 60px;
     :global {
         .ant-collapse-item-active,
         .ant-collapse-header {
@@ -14,197 +13,260 @@ $break-point-3: 767px;
     }
     .row {
         display: flex;
-        align-items: flex-start !important;
+        // align-items: flex-start !important;
 
         .left {
+            min-width: 300px;
+            min-height: 100vh;
             @media (max-width: $break-point-1) {
                 display: none;
             }
-        }
 
-        .right-wrapper {
-            margin-left: 40px;
-            @media (max-width: $break-point-1) {
-                max-width: 100%;
-                flex: 1 !important;
-            }
-            .filter-mobile {
-                position: absolute;
-                top: 0;
-                left: 0;
-                display: block;
-                background: #fff;
-                border-radius: 4px;
-                width: fit-content;
-
-                @media (min-width: $break-point-1) {
-                    display: none;
-                }
-                &-btn {
-                    // background: linear-gradient(180deg, #4ad7e0 0%, #4aabe1 100%);
-                    font-family: "Mali";
-                    font-size: 16px;
-                    line-height: 150%;
-                    padding: 6px 16px;
-                    background: linear-gradient(180deg, #89e6ff 0%, #3b7ce3 100%);
-                    -webkit-background-clip: text;
-                    -webkit-text-fill-color: transparent;
-                    @media (max-width: $mobile) {
-                        font-size: 14px;
-                        padding: 6px 12px;
-                    }
-                    &--active {
-                        background: linear-gradient(180deg, #4ad7e0 0%, #4aabe1 100%);
-                        color: #ffffff !important;
-                        -webkit-background-clip: unset;
-                        -webkit-text-fill-color: unset;
-                    }
-                }
+            @media (min-width: 1600px) {
+                min-width: 360px;
             }
         }
-    }
-}
 
-.right-top {
-    margin-top: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 20px;
-    @media (max-width: $break-point-3) {
-        flex-direction: column;
-        align-items: flex-start;
-    }
+        .filter-mobile {
+            position: absolute;
+            top: 0;
+            left: 0;
+            display: block;
+            background: #fff;
+            border-radius: 4px;
+            width: fit-content;
 
-    &-title {
-        font-weight: bold;
-        font-size: 20px;
-        line-height: 26px;
-        color: #ffffff;
-    }
+            @media (min-width: $break-point-1) {
+                display: none;
+            }
+            &-btn {
+                // background: linear-gradient(180deg, #4ad7e0 0%, #4aabe1 100%);
 
-    .search {
-        width: 380px;
-        border-bottom: 2px solid #ffffff;
-        color: #ffffff !important;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        font-family: "Mali-Regular", sans-serif;
-        margin-left: auto;
-        font-size: 16px !important;
-        @media (max-width: $break-point-3) {
-            margin: 20px 0px;
-        }
-
-        .icon {
-            cursor: pointer;
-            color: #ffffff;
-        }
-    }
-
-    .group-button-filter {
-        display: flex;
-        align-items: center;
-        // margin-left: auto;
-
-        .drop-down {
-            background: #56428f;
-            border-radius: 6px;
-            padding: 10.5px 12px;
-            width: 144px;
-            margin-left: 36px;
-            font-size: 14px;
-            :global {
-                .anticon-down {
-                    font-weight: bold;
+                font-size: 16px;
+                line-height: 150%;
+                padding: 6px 16px;
+                background: linear-gradient(180deg, #89e6ff 0%, #3b7ce3 100%);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                @media (max-width: $mobile) {
                     font-size: 14px;
+                    padding: 6px 12px;
+                }
+                &--active {
+                    background: linear-gradient(180deg, #4ad7e0 0%, #4aabe1 100%);
+                    color: #ffffff !important;
+                    -webkit-background-clip: unset;
+                    -webkit-text-fill-color: unset;
                 }
             }
-            @media (max-width: $break-point-3) {
-                margin-left: 0px;
-            }
+        }
 
-            &-label {
-                cursor: default;
+        .right {
+            padding: 20px 48px 20px 48px;
+            width: 100%;
+
+            .right-top {
+                margin-top: 40px;
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
-                font-family: "Montserrat", sans-serif;
-                font-size: 16px !important;
+                gap: 20px;
                 @media (max-width: $break-point-3) {
-                    margin: 20px 0px;
+                    flex-direction: column;
+                    align-items: flex-start;
                 }
 
-                .icon {
-                    cursor: pointer;
+                &-title {
+                    font-weight: bold;
+                    font-size: 20px;
+                    line-height: 26px;
                     color: #ffffff;
                 }
-            }
 
-            .group-button-filter {
-                display: flex;
-                align-items: center;
-
-                .drop-down {
-                    background: #56428f;
-                    border-radius: 6px;
-                    padding: 12px;
-                    width: 172px;
-                    margin-left: 36px;
-                    font-size: 14px;
-
-                    @media (max-width: $break-point-3) {
-                        margin-left: 0px;
-                    }
-
-                    &-label {
-                        cursor: default;
-                        display: flex;
-                        align-items: center;
-                        justify-content: space-between;
-                    }
-                }
-
-                .button-filter {
-                    display: none;
+                .search {
+                    width: 380px;
+                    border-bottom: 2px solid #ffffff;
+                    color: #ffffff !important;
+                    display: flex;
                     align-items: center;
-                    margin-left: 12px;
-                    background: #101a3f;
-                    border-radius: 6px;
-                    padding: 11px;
-                    font-size: 14px;
-
-                    &:active {
-                        background-color: rgb(17, 31, 87);
+                    justify-content: space-between;
+                    margin-left: auto;
+                    font-size: 16px !important;
+                    @media (max-width: $break-point-3) {
+                        margin: 20px 0px;
                     }
 
-                    @media (max-width: $break-point-2) {
-                        display: flex;
+                    .icon {
+                        cursor: pointer;
+                        color: #ffffff;
+                    }
+                }
+
+                .group-button-filter {
+                    display: flex;
+                    align-items: center;
+                    // margin-left: auto;
+
+                    .drop-down {
+                        background: #56428f;
+						color: #FFFFFF;
+                        border-radius: 6px;
+                        padding: 10.5px 12px;
+                        width: 144px;
+                        margin-left: 36px;
+                        font-size: 14px;
+                        :global {
+                            .anticon-down {
+                                font-weight: bold;
+                                font-size: 14px;
+                            }
+                        }
+                        @media (max-width: $break-point-3) {
+                            margin-left: 0px;
+                        }
+
+                        &-label {
+                            cursor: default;
+                            display: flex;
+                            align-items: center;
+                            justify-content: space-between;
+                            font-family: "Montserrat", sans-serif;
+                            font-size: 16px !important;
+                            @media (max-width: $break-point-3) {
+                                margin: 20px 0px;
+                            }
+
+                            .icon {
+                                cursor: pointer;
+                                color: #ffffff;
+                            }
+                        }
+
+                        .group-button-filter {
+                            display: flex;
+                            align-items: center;
+
+                            .drop-down {
+                                background: #56428f;
+                                border-radius: 6px;
+                                padding: 12px;
+                                width: 172px;
+                                margin-left: 36px;
+                                font-size: 14px;
+
+                                @media (max-width: $break-point-3) {
+                                    margin-left: 0px;
+                                }
+
+                                &-label {
+                                    cursor: default;
+                                    display: flex;
+                                    align-items: center;
+                                    justify-content: space-between;
+                                }
+                            }
+
+                            .button-filter {
+                                display: none;
+                                align-items: center;
+                                margin-left: 12px;
+                                background: #101a3f;
+                                border-radius: 6px;
+                                padding: 11px;
+                                font-size: 14px;
+
+                                &:active {
+                                    background-color: rgb(17, 31, 87);
+                                }
+
+                                @media (max-width: $break-point-2) {
+                                    display: flex;
+                                }
+                            }
+                        }
+                    }
+
+                    .button-filter {
+                        display: none;
+                        align-items: center;
+                        margin-left: 12px;
+                        background: #101a3f;
+                        border-radius: 6px;
+                        padding: 11px;
+                        font-size: 14px;
+
+                        &:active {
+                            background-color: rgb(17, 31, 87);
+                        }
+
+                        @media (max-width: $break-point-2) {
+                            display: flex;
+                        }
                     }
                 }
             }
-        }
 
-        .button-filter {
-            display: none;
-            align-items: center;
-            margin-left: 12px;
-            background: #101a3f;
-            border-radius: 6px;
-            padding: 11px;
-            font-size: 14px;
-
-            &:active {
-                background-color: rgb(17, 31, 87);
+            .right-filter {
+                margin-top: 36px;
+                .filter-box {
+                    display: inline-block;
+                    padding: 6px 10px;
+                    margin-right: 5px;
+                    border-radius: 20px;
+                    font-size: 14px;
+                    font-weight: 600;
+                    background: rgba(31, 30, 30, 0.43);
+                    border: 1px solid #dadada;
+                    color: #fff;
+                    &-image {
+                        padding-bottom: 2px;
+                        cursor: pointer;
+                    }
+                }
+                .filter-clear {
+                    display: inline-block;
+					background: linear-gradient(270.94deg, #FB35FF 4.88%, #8D4ABC 99.69%);
+                    background-clip: text;
+                    color: transparent;
+                    font-weight: 700;
+                    font-size: 14px;
+                    cursor: pointer;
+                }
             }
 
-            @media (max-width: $break-point-2) {
-                display: flex;
+            .button-filter {
+                margin-top: 36px;
+                .filter-box {
+                    display: inline-block;
+                    padding: 2px 8px 2px 8px;
+                    margin-right: 5px;
+                    border-radius: 20px;
+                    font-size: 14px;
+                    font-weight: 600;
+                    background: #1f1e1e6e;
+                    &-image {
+                        padding-bottom: 2px;
+                        cursor: pointer;
+                    }
+                }
+                .filter-clear {
+                    display: inline-block;
+                    background: linear-gradient(180deg, #00c6fb 0%, #005bea 100%);
+                    background-clip: text;
+                    color: transparent;
+                    font-weight: 700;
+                    font-size: 14px;
+                    cursor: pointer;
+                }
+            }
+
+            .list {
+                padding-top: 40px;
             }
         }
     }
 }
+
 .button-sell {
     width: fit-content;
     padding: 8px 20px !important;
@@ -221,35 +283,7 @@ $break-point-3: 767px;
         padding: 6px 12px;
     }
 }
-.button-filter {
-    margin-top: 36px;
-    .filter-box {
-        display: inline-block;
-        padding: 2px 8px 2px 8px;
-        margin-right: 5px;
-        border-radius: 20px;
-        font-size: 14px;
-        font-weight: 600;
-        background: #1f1e1e6e;
-        &-image {
-            padding-bottom: 2px;
-            cursor: pointer;
-        }
-    }
-    .filter-clear {
-        display: inline-block;
-        background: linear-gradient(180deg, #00c6fb 0%, #005bea 100%);
-        background-clip: text;
-        color: transparent;
-        font-weight: 700;
-        font-size: 14px;
-        cursor: pointer;
-    }
-}
-.list {
-    margin-top: 46px;
-    padding-top: 40px;
-}
+
 .pagination {
     text-align: center;
     margin-top: 30px;
@@ -259,6 +293,7 @@ $break-point-3: 767px;
     padding: 0px;
     li {
         color: #fff !important;
+		padding: 12px 10px;
         // font-weight: 600;
     }
     li:hover {
@@ -272,31 +307,4 @@ $break-point-3: 767px;
             background-color: #56428f !important;
         }
     }
-}
-.right-filter {
-  margin-top: 36px;
-  .filter-box {
-    display: inline-block;
-    padding: 6px 10px;
-    margin-right: 5px;
-    border-radius: 20px;
-    font-size: 14px;
-    font-weight: 600;
-    background:  rgba(31, 30, 30, 0.43);
-    border: 1px solid #DADADA;
-    color: #fff;
-    &-image {
-      padding-bottom: 2px;
-      cursor: pointer;
-    }
-  }
-  .filter-clear {
-    display: inline-block;
-    background: linear-gradient(180deg, #00c6fb 0%, #005bea 100%);
-    background-clip: text;
-    color: transparent;
-    font-weight: 700;
-    font-size: 14px;
-    cursor: pointer;
-  }
 }
