--- a/src/pages/Profile/ManageNft/MintNFT/DetailModal.module.scss
+++ b/src/pages/Profile/ManageNft/MintNFT/DetailModal.module.scss
@@ -124,6 +124,7 @@
                                 color: #ffffff;
                                 min-width: 50%;
                                 padding: 10px;
+                                
 
                                 .info-image {
                                     margin-right: 16px;
@@ -170,8 +171,9 @@
                         height: 60px;
                         overflow: hidden;
                         border-radius: 4px;
-                        background: #ad99e7;
-                        padding: 5px;
+                        // background: #ad99e7;
+                        border: 1px solid #ad99e7;
+                        // padding: 5px;
                     }
                     .info-image img {
                         height: 100%;
