--- a/src/components/NFTItem/NFTItem.module.scss
+++ b/src/components/NFTItem/NFTItem.module.scss
@@ -32,6 +32,7 @@ $break-point-2: 912px;
     .container {
         width: 240px;
         min-height: 320px;
+        // background: #402a7d;
         background: linear-gradient(180deg, #6f08fe 0%, #513e7d 100%);
         border: 1px solid #ad99e7;
         box-sizing: border-box;
@@ -39,21 +40,65 @@ $break-point-2: 912px;
         height: fit-content;
         cursor: pointer;
         margin: 0px 18px 30px 18px;
+        .middle{
+            display: flex;
+            padding-top: 12px;
+            padding-left: 20px;
+            padding-right: 20px;
+            justify-content: space-between;
+            align-items: center;
+            .quantity{
+                color: #fff;
+                border: 1px solid white;
+                // border-radius: 50%;
+                border-radius: 4px;
+                padding: 4px 6px;
+            }
+        }
+        .tag-market{
+            
+            
+            // position: absolute;
+            // padding-bottom: 8px;
+            // background:rgba(255, 255, 255, 0.25);
+            // background: #FDF5E8;
+            border-radius: 6px;
+            // border: 1px solid rgba(220, 196, 174, 0.75);
+            width: fit-content;
+            display: flex;
+            align-items: center;
+            gap: 12px;
 
+            img{
+                width: 28px;
+                height: 28px;
+                border-radius: 50%;
+                border: 1px solid rgba(220, 196, 174, 0.75);
+            }
+            span{
+                color: #fff !important;
+                color: red;
+                // font-weight: bold;
+                font-family: 'Montserrat';
+                font-size: 18px;
+            }
+        }
         .top {
             border-bottom: 1px solid #ad99e7;
+            // margin-top: 40px;
             box-sizing: border-box;
-            border-radius: 8px 8px 0px 0px;
+            // border-radius: 8px 8px 0px 0px;
             width: 100%;
+            padding: 0px 20px;
             height: 270px;
             background-repeat: no-repeat;
             background-position: center;
             background-size: 100% 100%;
-
+            position: relative;
             @media (max-width: $break-point-1) {
                 background-size: 150px 190px;
             }
-
+           
             .tag {
                 background: rgba(232, 217, 255, 0.5);
                 color: #402a7d;
@@ -79,8 +124,8 @@ $break-point-2: 912px;
         }
 
         .bottom {
-            padding: 20px;
-
+            padding: 12px 20px 20px 20px;
+            // background: linear-gradient(180deg, #6f08fe 0%, #513e7d 100%);
             .name {
                 display: flex;
                 align-items: center;
