--- a/src/pages/Profile/ManageNft/MintNFT/PreviewModal.module.scss
+++ b/src/pages/Profile/ManageNft/MintNFT/PreviewModal.module.scss
@@ -77,9 +77,10 @@
                     .top {
                         border-bottom: 1px solid #ad99e7;
                         box-sizing: border-box;
-                        border-radius: 8px;
+                        border-radius: 8px 8px 0px 0px;
                         width: 100%;
                         height: 180px;
+                        // overflow: hidden;
                         // background-repeat: no-repeat;
                         // background-position: center;
                         // background-size: 101% 101%;
@@ -91,7 +92,7 @@
                         .preview-img {
                             width: 100%;
                             height: 100%;
-                            border-radius: 8px;
+                            // border-radius: 8px 8px 0px 0px;
                         }
                     }
 
