--- a/src/pages/Profile/Store/NFTDetail/NFTDetail.module.scss
+++ b/src/pages/Profile/Store/NFTDetail/NFTDetail.module.scss
@@ -169,8 +169,9 @@
             height: 60px;
             overflow: hidden;
             border-radius: 4px;
-            background: #ad99e7;
-            padding: 5px;
+            // background: #ad99e7;
+            border: 1px solid #ad99e7;;
+            // padding: 5px;
         }
         .info-image img {
             height: 100%;
