--- a/src/pages/Profile/Store/ViewItemNFT/index.module.scss
+++ b/src/pages/Profile/Store/ViewItemNFT/index.module.scss
@@ -11,208 +11,203 @@ $break-point-3: 767px;
     justify-content: space-between;
     gap: 20px;
     @media (max-width: $break-point-3) {
-      flex-direction: column;
-      align-items: flex-start;
+        flex-direction: column;
+        align-items: flex-start;
     }
 
     &-title {
-      font-weight: bold;
-      font-size: 20px;
-      line-height: 26px;
-      color: #ffffff;
+        font-weight: bold;
+        font-size: 20px;
+        line-height: 26px;
+        color: #ffffff;
     }
 
-    
-  .search {
-    width: 380px;
-    border-bottom: 2px solid #ffffff;
-    color: #ffffff !important;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-left: auto;
-    font-size: 16px !important;
-    @media (max-width: $break-point-3) {
-      margin: 20px 0px;
-    }
-
-    .icon {
-      cursor: pointer;
-      color: #ffffff;
-    }
-  }
-  
-  .group-button-filter {
-    display: flex;
-    align-items: center;
-    // margin-left: auto;
-    
-    .drop-down {
-      background: #56428F;
-      border-radius: 6px;
-      padding: 10.5px 12px;
-      width: 144px;
-      margin-left: 36px;
-      font-size: 14px;
-      :global{
-        .anticon-down{
-          font-weight: bold;
-          font-size: 14px;
-        }
-      }
-      @media (max-width: $break-point-3) {
-        margin-left: 0px;
-      }
-      
-      &-label {
-        cursor: default;
+    .search {
+        width: 380px;
+        border-bottom: 2px solid #ffffff;
+        color: #ffffff !important;
         display: flex;
         align-items: center;
         justify-content: space-between;
-		font-family: 'Montserrat', sans-serif;
+        margin-left: auto;
         font-size: 16px !important;
         @media (max-width: $break-point-3) {
-          margin: 20px 0px;
+            margin: 20px 0px;
         }
 
         .icon {
-          cursor: pointer;
-          color: #ffffff;
+            cursor: pointer;
+            color: #ffffff;
         }
-      }
+    }
 
-      .group-button-filter {
+    .group-button-filter {
         display: flex;
         align-items: center;
+        // margin-left: auto;
 
         .drop-down {
-          background: #56428F;
-          border-radius: 6px;
-          padding: 12px;
-          width: 172px;
-          margin-left: 36px;
-          font-size: 14px;
+            background: #56428f;
+            border-radius: 6px;
+            padding: 10.5px 12px;
+            width: 144px;
+            margin-left: 36px;
+            font-size: 14px;
+            :global {
+                .anticon-down {
+                    font-weight: bold;
+                    font-size: 14px;
+                }
+            }
+            @media (max-width: $break-point-3) {
+                margin-left: 0px;
+            }
 
-          @media (max-width: $break-point-3) {
-            margin-left: 0px;
-          }
+            &-label {
+                cursor: default;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                font-family: "Montserrat", sans-serif;
+                font-size: 16px !important;
+                @media (max-width: $break-point-3) {
+                    margin: 20px 0px;
+                }
 
-          &-label {
-            cursor: default;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-          }
+                .icon {
+                    cursor: pointer;
+                    color: #ffffff;
+                }
+            }
+
+            .group-button-filter {
+                display: flex;
+                align-items: center;
+
+                .drop-down {
+                    background: #56428f;
+                    border-radius: 6px;
+                    padding: 12px;
+                    width: 172px;
+                    margin-left: 36px;
+                    font-size: 14px;
+
+                    @media (max-width: $break-point-3) {
+                        margin-left: 0px;
+                    }
+
+                    &-label {
+                        cursor: default;
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                    }
+                }
+
+                .button-filter {
+                    display: none;
+                    align-items: center;
+                    margin-left: 12px;
+                    background: #101a3f;
+                    border-radius: 6px;
+                    padding: 11px;
+                    font-size: 14px;
+
+                    &:active {
+                        background-color: rgb(17, 31, 87);
+                    }
+
+                    @media (max-width: $break-point-2) {
+                        display: flex;
+                    }
+                }
+            }
         }
 
         .button-filter {
-          display: none;
-          align-items: center;
-          margin-left: 12px;
-          background: #101a3f;
-          border-radius: 6px;
-          padding: 11px;
-          font-size: 14px;
+            display: none;
+            align-items: center;
+            margin-left: 12px;
+            background: #101a3f;
+            border-radius: 6px;
+            padding: 11px;
+            font-size: 14px;
 
-          &:active {
-            background-color: rgb(17, 31, 87);
-          }
+            &:active {
+                background-color: rgb(17, 31, 87);
+            }
 
-          @media (max-width: $break-point-2) {
-            display: flex;
-          }
+            @media (max-width: $break-point-2) {
+                display: flex;
+            }
         }
-      }
     }
-
-    .button-filter {
-      display: none;
-      align-items: center;
-      margin-left: 12px;
-      background: #101a3f;
-      border-radius: 6px;
-      padding: 11px;
-      font-size: 14px;
-
-      &:active {
-        background-color: rgb(17, 31, 87);
-      }
-
-      @media (max-width: $break-point-2) {
-        display: flex;
-      }
-    }
-    
-  }
 }
-  .button-sell {
+.button-sell {
     width: fit-content;
     padding: 8px 20px !important;
     font-weight: bold;
     font-size: 16px !important;
     line-height: 150%;
-    
+
     border-radius: 0px;
     color: white !important;
-    background: linear-gradient(94.08deg, #7F00FF -1.88%, #E100FF 100%) !important;
+    background: linear-gradient(94.08deg, #7f00ff -1.88%, #e100ff 100%) !important;
     border-radius: 6px;
     @media (max-width: $mobile) {
-      font-size: 14px;
-      padding: 6px 12px;
+        font-size: 14px;
+        padding: 6px 12px;
     }
-    
-  }
-  .button-filter {
+}
+.button-filter {
     margin-top: 36px;
     .filter-box {
-      display: inline-block;
-      padding: 2px 8px 2px 8px;
-      margin-right: 5px;
-      border-radius: 20px;
-      font-size: 14px;
-      font-weight: 600;
-      background: #1f1e1e6e;
-      &-image {
-        padding-bottom: 2px;
-        cursor: pointer;
-      }
+        display: inline-block;
+        padding: 2px 8px 2px 8px;
+        margin-right: 5px;
+        border-radius: 20px;
+        font-size: 14px;
+        font-weight: 600;
+        background: #1f1e1e6e;
+        &-image {
+            padding-bottom: 2px;
+            cursor: pointer;
+        }
     }
     .filter-clear {
-      display: inline-block;
-      background: linear-gradient(180deg, #00c6fb 0%, #005bea 100%);
-      background-clip: text;
-      color: transparent;
-      font-weight: 700;
-      font-size: 14px;
-      cursor: pointer;
+        display: inline-block;
+        background: linear-gradient(180deg, #00c6fb 0%, #005bea 100%);
+        background-clip: text;
+        color: transparent;
+        font-weight: 700;
+        font-size: 14px;
+        cursor: pointer;
     }
-    
-  }
-  .list{
-      margin-top: 46px;
-      padding-top: 40px;
-  }
-  .pagination {
+}
+.list {
+    margin-top: 46px;
+    padding-top: 40px;
+}
+.pagination {
     text-align: center;
     margin-top: 30px;
 }
-.menu-dropdown{
-  background-color: #56428F !important;
-  padding: 0px;
-  li{
-    color: #fff !important;
-    // font-weight: 600;
-  }
-  li:hover{
-    background-color: #56428F !important;
-
-  }
-  &--active{
-    background: linear-gradient(94.08deg, #7F00FF -1.88%, #E100FF 100%);
-  }
-  :global{
-    .ant-dropdown{
-      background-color: #56428F !important;
+.menu-dropdown {
+    background-color: #56428f !important;
+    padding: 0px;
+    li {
+        color: #fff !important;
+        // font-weight: 600;
     }
-  }
+    li:hover {
+        background-color: #56428f !important;
+    }
+    &--active {
+        background: linear-gradient(94.08deg, #7f00ff -1.88%, #e100ff 100%);
+    }
+    :global {
+        .ant-dropdown {
+            background-color: #56428f !important;
+        }
+    }
 }
