--- a/src/components/ListModal/ListModal.module.scss
+++ b/src/components/ListModal/ListModal.module.scss
@@ -4,7 +4,7 @@ $mobile: 576px;
 $break-point-2: 912px;
 $break-point-3: 767px;
 .modal-style {
-    background: #ebe3ff;
+    background: #fdecd9;
     border-radius: 8px;
     width: 1080px;
     margin: 60px auto;
