--- a/src/pages/Profile/CreateGame/Item.module.scss
+++ b/src/pages/Profile/CreateGame/Item.module.scss
@@ -1,5 +1,5 @@
 .item-div {
-    background: #ebe3ff;
+    background: linear-gradient(180deg, #FEF5E8 0%, #FEE8D0 100%);
     border-radius: 8px;
     height: 200px;
 }
