--- a/src/components/FilterStore/FilterStore.module.scss
+++ b/src/components/FilterStore/FilterStore.module.scss
@@ -1,6 +1,6 @@
 .filter {
-    background: #402a7d;
-    backdrop-filter: blur(50px);
+    background: rgba(253, 245, 232, 0.5);
+backdrop-filter: blur(20px);
     padding: 60px 25px;
     min-height: 100%;
     width: 100%;
@@ -12,7 +12,7 @@
         .title {
             font-weight: 600;
             font-size: 24px;
-            color: #ffffff;
+            color: #833F1D;
             margin-left: 12px;
         }
     }
@@ -30,7 +30,7 @@
                 font-weight: 600;
                 font-size: 20px;
                 line-height: 26px;
-                color: #ffffff;
+                color: #833F1D;
 				display: flex;
 				align-items: center;
 				justify-content: space-between;
@@ -72,7 +72,7 @@
                         width: 24px;
                         height: 24px;
                         border-radius: 50%;
-                        background-color: #ffffff;
+                        background-color: #833F1D;
                     }
                 }
 
@@ -87,7 +87,7 @@
             font-weight: 600;
             font-size: 14px;
             line-height: 23px;
-            color: #ffffff;
+            color: #833F1D;
 
             .name {
                 display: flex;
@@ -99,7 +99,7 @@
                     width: 24px;
                     height: 24px;
                     border-radius: 50%;
-                    background-color: #ffffff;
+                    background-color: #833F1D;
                     //   border: 1px solid #6dd0e7;
                 }
 
@@ -107,7 +107,7 @@
                     font-weight: 500;
                     font-size: 16px;
                     line-height: 21px;
-                    color: #ffffff;
+                    color: #833F1D;
                     margin-left: 12px;
 
                     &:hover {
@@ -127,7 +127,7 @@
                     width: 24px;
                     height: 24px;
                     border-radius: 50%;
-                    background-color: #ffffff;
+                    background-color: #833F1D;
                     //   border: 1px solid #6dd0e7;
                 }
 
@@ -149,7 +149,7 @@
             font-weight: 600;
             font-size: 14px;
             line-height: 23px;
-            color: #ffffff;
+            color: #833F1D;
             padding: 12px 40px 12px 16px;
             cursor: pointer;
         }
@@ -164,6 +164,6 @@
         font-weight: 600;
         font-size: 14px;
         line-height: 150%;
-        color: #ffffff;
+        color: #833F1D;
     }
 }
