--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -3,10 +3,10 @@ $break-point-2: 1180px;
 
 .navbar {
     position: relative;
-    background: #3c1350;
+    background: #944850;;
     width: 100%;
     height: 70px;
-
+    font-family: 'Mali', cursive;
     .container {
         max-width: 96%;
         height: 70px;
@@ -64,11 +64,11 @@ $break-point-2: 1180px;
         }
     }
     .cn-wallet {
-        padding: 10px 18px;
+        padding: 10px 20px;
         color: #fff;
         font-size: 20px;
         font-weight: 600;
-        background: linear-gradient(180deg, #7000ff 0%, #d785fe 100%);
+        background: #F25858;
         backdrop-filter: blur(4px);
         border-radius: 6px;
         cursor: pointer;
