--- a/src/pages/Profile/ManageNft/MintNFT/MintNFT.module.scss
+++ b/src/pages/Profile/ManageNft/MintNFT/MintNFT.module.scss
@@ -22,9 +22,10 @@ $mobile: 576px;
         }
         &-header {
             padding: 10px 20px;
-            background: #faf0ff;
+            background: rgba(255, 255, 255, 0.7);
+        color: #833f1d;
             border-radius: 4px;
-            color: #4200ff;
+            
             font-weight: 600;
             margin-bottom: 5px;
 
