fix: input amount buy nft

--- a/src/pages/Store/NFTDetail/index.module.scss
+++ b/src/pages/Store/NFTDetail/index.module.scss
@@ -196,3 +196,9 @@
         }
     }
 }
+
+.price-input::-webkit-outer-spin-button,
+.price-input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
