Fix: Buy NFT F5 when mint nft

--- a/src/pages/Profile/CreateGame/CreateGame.module.scss
+++ b/src/pages/Profile/CreateGame/CreateGame.module.scss
@@ -93,6 +93,8 @@ $mobile: 576px;
 
         .create-action {
             justify-content: center;
+			margin-bottom: 16px;
+			
             .create-button {
                 font-weight: 700;
                 font-size: 14px;
