--- a/src/pages/Profile/ManageNft/MintNFT/TableAddAttribute.module.scss
+++ b/src/pages/Profile/ManageNft/MintNFT/TableAddAttribute.module.scss
@@ -67,8 +67,19 @@ $mobile: 576px;
             }
             .input {
                 @extend .input;
-                width: 80%;
+                width: 100%;
             }
+
+			.invalid {
+				border: 1px solid rgba(240, 134, 134, 0.99) !important;
+				border-radius: 4px;
+				padding: 4px;
+
+				// &:focus {
+				// 	border-radius: 0px;
+				// }
+			}
+
 
             .image-upload {
                 input {
