--- a/src/pages/Profile/Store/NFTDetail/NFTDetail.module.scss
+++ b/src/pages/Profile/Store/NFTDetail/NFTDetail.module.scss
@@ -119,26 +119,45 @@
                 flex-wrap: wrap;
 
                 .one-attribute {
-                    display: flex;
-                    align-items: center;
                     color: #ffffff;
                     min-width: 50%;
-                    padding: 10px;
 
-                    .info-image {
-                        margin-right: 16px;
-                    }
+                    .attr-header {
+                        display: flex;
+                        align-items: center;
 
-                    .info-attribute {
-                        .info-header {
-                            font-weight: 500;
-                            font-size: 16px;
+                        .attr-image {
+                            border-radius: 3px;
+                            width: 16px;
+                            height: 16px;
+                            margin-right: 4px;
+                            background-color: #ffffff;
                         }
 
-                        .info-text {
-                            font-weight: 300;
-                            font-size: 14px;
+                        .attr-name {
+                            font-style: normal;
+                            font-weight: 500;
+                            font-size: 12px;
                             line-height: 150%;
+                            color: #ffffff;
+                        }
+                    }
+
+                    .attr-value {
+                        font-weight: 500;
+                        font-size: 22px;
+                        line-height: 150%;
+                        color: #ffffff;
+                        margin-top: 8px;
+
+                        .value-image {
+                            text-overflow: ellipsis;
+                            white-space: nowrap;
+                            overflow: hidden;
+                            border-radius: 3px;
+                            width: 32px;
+                            height: 32px;
+                            background-color: #ffffff;
                         }
                     }
                 }
@@ -170,7 +189,7 @@
             overflow: hidden;
             border-radius: 4px;
             // background: #ad99e7;
-            border: 1px solid #ad99e7;;
+            border: 1px solid #ad99e7;
             // padding: 5px;
         }
         .info-image img {
